--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "endnotes.doc.tar.xz": 868631f86110241e4b252122351918161ca33c5a
-  "endnotes.tar.xz": 652c6d142a1a31d1bcbebaabe9315ac48204f024
+  endnotes.doc.tar.xz: 1d705f9e36f6ee444cda9cbbe54a69e7041c4b6e
+  endnotes.tar.xz: c7eb138ca9e85280fbf657fa588889aa3705f7a3
