--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  endnotes.doc.tar.xz: 478c67357b9298b3251a01035fa4834439882eab
-  endnotes.tar.xz: 4d12fdb8e59d35ebe8956a54cdac79ecc41e05f9
+  endnotes.doc.r53319.tar.xz: 500e16b56a8ed9ac5f8c11c196006c9fe3bdc889
+  endnotes.r53319.tar.xz: 5a7f726b7030d0175698456cd578990d3e1f84aa
